--  * Modified file
--  ! Bug found
--  # Bug fixed


---- Functional Changes:  version 0.8.0 -> 0.x.x ------------------------------
New functions:
cla, clf, gca, gcf, get,
global, set, isglobal, polar

Updated functions:
blanks, checkForUpdates, patch, path, substring

---- HISTORY ------------------------------------------------------------------
2007/08/xx 
stefan + 

2007/08/19 
stefan + committed lots of files to new repository

2007/08/18 
stefan + switched development over to a subversion repository

2007/08/14 
jason * SwingGUI.java added requestFocus after starting 
jason # num2str.java bugfix
jason # AddPath.java bugfix
jason # rehash.java bugfix
jason + testGlobal.java new tests
jason * testNum2Str.java new tests
jason * Functions/* corrections and add on to rehashing of functions

2007/08/13 
jason + major update to the swing user interface

2007/07/28 
stefan * ui/questdlg.java modal dialog with choice

2007/07/08 
stefan + Graphics/CartesianAxesObject.java extends AxesObject.java for
         better separation of various axes: polar, cartesian, 3D,... 

2007/07/08 
stefan * Functions/Graphics/Graph2d/polar.java when called as polar([3,5,3])add an x-axis 
         like [1,2,3] instead of [0,1,2]
stefan * Functions/Graphics/Graph2d/plot.java when called as plot([3,5,3])add an x-axis 
         like [1,2,3] instead of [0,1,2]
stefan * Graphics/LineObject.java enhancements for polar plots
stefan * Graphics/PolarAxesObject.java enhancements for polar plots

2007/07/01 
stefan * Functions/Finance/vol.m copied from Octave
stefan # Functions/String/_double.java added DoubleNumberToken as input
stefan * Functions/miscellaneous/single.m copied from Octave

2007/06/23 
stefan - removed a lot of files from the Classes-subdirectories.

2007/06/22 
stefan # minor corrections to SwingGUI
stefan + Classes/MathLib/work  for local and private work of the user
   standard search path

2007/06/15 
stefan + Documentation/src/graphics.xml for documentation of the